--- a/src/pages/pag01/index.pug
+++ b/src/pages/pag01/index.pug
@@ -108,36 +108,119 @@ block body
 					p.pTitle Programa Primeira Infância no SUAS:
 					p Voltado para famílias com gestantes e crianças na primeira infância, ou seja de 0 a 6 anos de idade, esse programa busca fortalecer os vínculos familiares e comunitários, promover a parentalidade, ampliar o acesso a direitos e garantir o desenvolvimento integral das crianças em situação de vulnerabilidade social. O programa também promove a articulação intersetorial entre os serviços de assistência social e outras políticas públicas, como saúde e educação, garantindo integralidade nos cuidados.
 		
-		//- section.sec2.up
-			h2 O que é Educação Integral e por que ela<br> é necessária?
-			.flex.up
-				.boxText
-					.boxInteraction
-						.flexButtons
-							button.btn.btn1.open(data-target=".msg1")
-								p 01
-							button.btn.btn2(data-target=".msg2")
-								p 02
-							button.btn.btn3(data-target=".msg3")
-								p 03
-						.boxMessage
-							.msg.msg1
-								p.pTitle Além das fronteiras
-								p Pensar em Educação Integral significa pensar em uma educação que vá além das fronteiras físicas da escola e que tenha como objetivo central o desenvolvimento completo do indivíduo em seus aspectos intelectual, físico, emocional e social. Esse modelo reconhece que a escola não pode estar isolada da comunidade e das diversas realidades que os alunos vivem.
-							.msg.msg2.hide
-								p.pTitle Experiências de aprendizagem
-								p Uma educação integral deve proporcionar experiências de aprendizagem tanto dentro quanto fora da escola, estimulando os estudantes a se engajarem em práticas sociais que envolvam cooperação, solidariedade e reflexão crítica sobre o mundo ao seu redor.
-							.msg.msg3.hide
-								p.pTitle Novas formas de pensar
-								p A Educação Integral busca desenvolver novas formas de pensar, valores e atitudes que ajudem a formar cidadãos conscientes e ativos em suas comunidades. Isso é particularmente relevante em contextos de maior vulnerabilidade social, onde as crianças e os adolescentes enfrentam desafios como a fome, o medo, e a incerteza quanto ao futuro.
-				+image('img02.png', 'img right')
-					
-		//- section.sec3
-			.box.up
-				p Que este material possa inspirar práticas educativas integradas e unificadas no propósito de inovar socialmente e transformar vidas!
+		section.sec5
+			.flex
+				.boxText.left
+					h1 Funções da Política de Assistência Social na proteção social mais ampla
+					p O sistema de proteção social brasileiro, integrado ao sistema nacional e internacional de direitos humanos, foi construído, historicamente, a partir de princípios como a universalidade e a integralidade. Diretrizes democráticas importantes também orientam a proteção social brasileira, como a descentralização político administrativa, o que demandou reordenamentos, orientados por perspectivas que fomentam a participação social e governanças deliberativas.
+				+image('img06.png', 'img right')
 		
-		//- footer.up
-			+image('logo-footer.png', 'imgFooter')
+		section.sec6
+			.flex
+				+image('img08.png', 'img left')
+				.boxText.right
+					p A assistência social é uma política de Seguridade Social que se integra à saúde e à previdência social. É uma política pública não contributiva, ou seja, a contribuição para a Seguridade Social não é critério para acesso aos direitos  relacionados à assistência social. Além de não contributiva é considerada um dever do Estado e direito de cidadania a quem dela necessitar a mesma premissa da Educação Integral.
+					p A política de Assistência Social é fundamental para garantir a proteção social e o fortalecimento de vínculos familiares e comunitários, de indivíduos e famílias que se encontram em vulnerabilidade social e risco pessoal e/ou social. Neste guia, você terá acesso às orientações essenciais sobre os conceitos básicos da assistência social, suas funções e estratégias que podem ser adotadas para maior integração com a educação, visando a integralidade das atenções.
+
+		section.sec7
+			.box.up
+				p A Assistência Social objetiva, essencialmente, promover a inclusão social e a equidade; prevenir situações de vulnerabilidade e risco social; fortalecer os vínculos familiares e comunitários; garantir o acesso a direitos e serviços socioassistenciais.
+		
+		section.sec8
+			p.up Na Lei Orgânica de Assistência Social (LOAS – Lei 8.742/93) são objetivos da assistência social previstos no artigo 2º:
+			.container-accordeon.up
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p Proteção social
+					.accordeon-texto
+						p A proteção social, que visa à garantia da vida, à redução de danos e à prevenção da incidência de riscos, especialmente:
+						p a) a proteção à família, à maternidade, à infância, à adolescência e à velhice;
+						p b) o amparo às crianças e aos adolescentes carentes;
+						p c) a promoção da integração ao mercado de trabalho;
+						p d) a habilitação e reabilitação das pessoas com deficiência e a promoção de sua integração à vida comunitária;
+						p e) a garantia de 1 (um) salário-mínimo de benefício mensal à pessoa com deficiência e ao idoso que comprovem não possuir meios de prover a própria manutenção ou de tê-la provida por sua família.
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p Vigilância socioassistencial
+					.accordeon-texto
+						p A vigilância socioassistencial, que visa a analisar territorialmente a capacidade protetiva das famílias e nela a ocorrência de vulnerabilidades, de ameaças, de vitimizações e danos.
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p Defesa de direitos
+					.accordeon-texto
+						p A defesa de direitos, que visa a garantir o pleno acesso aos direitos no conjunto das provisões socioassistenciais.
+
+		section.sec9
+			.box.up
+				p Para o enfrentamento da pobreza, a assistência social realiza-se de forma integrada às políticas setoriais, garantindo mínimos sociais e provimento de condições para atender contingências sociais e promovendo a universalização dos direitos sociais.
+
+		section.sec10
+			.flex
+				+image('img12.png', 'img left')
+				.boxText.right
+					h1 A função da Proteção Social Básica e Especial
+					p A proteção social básica está relacionada a um conjunto de serviços, programas, projetos e benefícios da assistência social que visa prevenir situações de vulnerabilidade e risco social por meio do desenvolvimento de potencialidades e aquisições e do fortalecimento de vínculos familiares e comunitários.
+					p Já a proteção social especial expressa um conjunto de serviços, programas e projetos cujo objetivo é contribuir para a reconstrução de vínculos familiares e comunitários, a defesa de direito, o fortalecimento das potencialidades e aquisições e a proteção de famílias e indivíduos para o enfrentamento das situações de violação de direitos.
+
+		section.sec11
+			.flex
+				.boxText.left
+					p As proteções sociais básica e especial são ofertadas pela rede socioassistencial, de forma integrada, diretamente pelos entes públicos e/ou pelas entidades e organizações de assistência social vinculadas ao SUAS, respeitadas as especificidades de cada ação.
+					p Para as ofertas da proteção social o SUAS conta com os Centros de Referência de Assistência Social (CRAS); os Centros Especializados de Assistência Social (CREAS); os Centros de Atendimento Especializados para a População em Situação de Rua (Centro Pop); os acolhimentos institucionais, além de Centros de Convivência.
+				+image('img13.png', 'img right')
+
+		section.sec12
+			p.pTitle Estruturação das provisões da assistência social no Brasil
+			p As provisões da assistência social no Brasil são estruturadas em serviços, programas, projetos e benefícios.
+			.box.up
+				ol
+					li
+						p <b>Serviços:</b> atividades continuadas que visam à melhoria da vida da população.São ações voltadas para as necessidades básicas dos cidadãos, observando os objetivos e diretrizes estabelecidos em lei. A PNAS prevê seu ordenamento em rede de acordo com os níveis de proteção básica e especial, de média e alta complexidade.
+					li
+						p <b>Programas:</b> ações integradas e complementares com objetivos, prazo e área de abrangência definidos para qualificar, incentivar e melhorar os benefícios e os serviços assistenciais.
+					li
+						p <b>Projetos:</b> são investimentos econômicos e sociais, destinados às pessoas em situação de pobreza, que buscam subsidiar técnica e financeiramente iniciativas que garantam a capacidade produtiva e de gestão para a melhoria das condições gerais de subsistência, a elevação da qualidade de vida e a preservação do meio ambiente, em articulação com as demais políticas públicas. De acordo com a PNAS/2004, esses projetos integram o nível de proteção social básica. Contudo, podem voltar-se às famílias e pessoas em situação de risco, público-alvo da proteção social especial.
+
+		section.sec13
+			h2.up Veja abaixo detalhes sobre os benefícios da proteção básica e especial:
+			.container-accordeon.up
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p Benefício de Prestação Continuada (BPC):
+					.accordeon-texto
+						p Provido pelo governo federal, consiste no repasse de um salário-mínimo mensal ao idoso (com 65 anos ou mais) e à Pessoa com Deficiência que comprovem não ter meios para se sustentar ou de ser sustentado pela família. Esse benefício compõe o nível de proteção social básica, sendo seu repasse feito diretamente ao beneficiário.
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p Benefícios Eventuais
+					.accordeon-texto
+						p Têm como objetivo o pagamento de auxílio por natalidade, morte ou para atender necessidades originadas de situações de vulnerabilidade temporária, com prioridade para a criança, a família, o idoso, a pessoa com deficiência, a gestante e em casos de calamidade pública. Esse benefício deve ser custeado pelos municípios.
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p Transferência de Renda
+					.accordeon-texto
+						p Programas de transferência monetária direta para as famílias inscritas no Cadastro Único, com o objetivo de combater a fome e promover o alívio imediato da pobreza; contribuir para a interrupção do ciclo de reprodução da pobreza entre as gerações; promover o desenvolvimento e a proteção social das famílias, especialmente das crianças, dos adolescentes e dos jovens em situação de pobreza; fortalecer o acesso a direitos sociais básicos nas áreas de educação, saúde e assistência social. As ações complementares têm como objetivo o desenvolvimento das famílias e a superação de sua situação de vulnerabilidade social, por meio da articulação intersetorial com outras políticas. O Programa Bolsa Família tem tais dimensões e objetivo e está presente em todos os municípios brasileiros, porém é importante lembrar que os municípios, o Distrito Federal e os estados podem efetuar a complementação do valor da transferência ou instituírem programas próprios com estes mesmos objetivos e dimensões.
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p Cadastro Único - CADÚNICO
+					.accordeon-texto
+						p Instrumento de identificação por meio de cadastramento alto declarado de famílias em situação de pobreza e vulnerabilidade socioeconômica. Mas também recebe informações de outras bases de dados. Atualmente, subsidia mais de 33 programas federais e programas estaduais, do Distrito Federal e municipais. Embora seja de gestão e financiamento federal, sua execução é realizada pelos municípios, Distrito Federal, no atendimento direto às famílias e pessoas. Atualmente, o CADÚNICO vem se consolidando como uma importante ferramenta para a construção de diagnóstico socioterritorial, subsidiando estudos e a vigilância socioassistencial. O cadastro está presente em todos os municípios brasileiros.
+
+		footer
+			+image('logo-footer.png', 'imgFooter up')
 
 block scripts
 	script(src="script.js")
