--- a/src/pages/pag01/style.less
+++ b/src/pages/pag01/style.less
@@ -149,6 +149,7 @@ header {
             }
     
             p {
+                font-weight: 500;
                 font-size: 0.85rem;
                 margin-top: 1rem;
                 color: #1E1E1E;
@@ -190,6 +191,7 @@ header {
     padding: 4rem 4.7rem;
     p {
         font-size: .85rem;
+        font-weight: 500;
     }
     h2 {
         font-size: 1.4rem;
@@ -256,6 +258,255 @@ header {
                 }
             }
         }
+    }
+}
+
+.sec5 {
+    background-color: #DF9428;
+    padding: 7rem 4.8rem 10rem;
+    background-image: url(../../assets/img/img07.png);
+    background-size: contain;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    .flex {
+        display: flex;
+        align-items: center;
+        gap: 4.1rem;
+        .img {
+            width: 18.2rem;
+        }
+    
+        .boxText {
+            h1 {
+                font-size: 1.4rem;
+                color: #ffffff;
+            }
+    
+            p {
+                font-size: 0.85rem;
+                margin-top: 1rem;
+                color: #ffffff;
+            }
+        }
+    }
+}
+
+.sec6 {
+    background-color: #209CD3;
+    padding: 5rem 4.8rem 12rem;
+    background-image: url(../../assets/img/img09.jpg);
+    background-size: contain;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    .flex {
+        display: flex;
+        align-items: center;
+        gap: 4.1rem;
+        .img {
+            width: 18.2rem;
+        }
+    
+        .boxText {
+            p {
+                font-weight: 500;
+                font-size: 0.85rem;
+                margin-top: 1rem;
+                color: #1E1E1E;
+            }
+        }
+    }
+}
+
+.sec7 {
+    padding: 6rem 4rem 8rem;
+    display: flex;
+    justify-content: center;
+    background-color: #ffffff;
+    background-image: url(../../assets/img/img04.png);
+    background-size: contain;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    .box {
+        background-image: url(../../assets/img/img03.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        width: 39rem;
+        height: 9.2rem;
+        display: flex;
+        align-items: center;
+        padding: 4rem;
+        p {
+            text-align: center;
+            color: #1E1E1E;
+            font-weight: 500;
+            font-size: .85rem;
+        }
+    }
+}
+
+.sec8 {
+    background-color: #FDC83E;
+    padding: 4rem 4.7rem;
+    p {
+        font-size: .85rem;
+        font-weight: 500;
+    }
+    h2 {
+        font-size: 1.4rem;
+        text-align: center;
+        margin-top: 2rem;
+        color: #053A57;
+    }
+    .container-accordeon {
+        margin-top: 3rem;
+    }
+}
+
+.sec9 {
+    padding: 6rem 4rem;
+    display: flex;
+    justify-content: center;
+    background-color: #ffffff;
+    .box {
+        background-image: url(../../assets/img/img03.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        width: 39rem;
+        height: 9.2rem;
+        display: flex;
+        align-items: center;
+        padding: 4rem;
+        p {
+            text-align: center;
+            color: #1E1E1E;
+            font-weight: 500;
+            font-size: .85rem;
+        }
+    }
+}
+
+.sec10 {
+    background-color: #053A57;
+    padding: 6rem 4.8rem;
+    .flex {
+        display: flex;
+        align-items: center;
+        gap: 4.1rem;
+        .img {
+            width: 18.2rem;
+        }
+    
+        .boxText {
+            h1 {
+                font-size: 1.4rem;
+                color: #ffffff;
+            }
+    
+            p {
+                font-weight: 500;
+                font-size: 0.85rem;
+                margin-top: 1rem;
+                color: #ffffff;
+            }
+        }
+    }
+}
+
+.sec11 {
+    background-color: #DF9428;
+    padding: 7rem 4.8rem 10rem;
+    background-image: url(../../assets/img/img07.png);
+    background-size: contain;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    .flex {
+        display: flex;
+        align-items: center;
+        gap: 4.1rem;
+        .img {
+            width: 18.2rem;
+        }
+    
+        .boxText {
+            h1 {
+                font-size: 1.4rem;
+                color: #ffffff;
+            }
+    
+            p {
+                font-size: 0.85rem;
+                margin-top: 1rem;
+                color: #ffffff;
+            }
+        }
+    }
+}
+
+.sec12 {
+    padding: 6rem 4rem 10rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #209CD3;
+    background-image: url(../../assets/img/img09.jpg);
+    background-size: contain;
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    .pTitle {
+        font-size: 1rem;
+        font-weight: bold;
+    }
+    p {
+        width: 100%;
+        font-size: .85rem;
+        font-weight: 500;
+    }
+    p + p {
+        margin-top: 1rem;
+    }
+    .box {
+        background-image: url(../../assets/img/img10.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        width: 39rem;
+        height: 29.2rem;
+        display: flex;
+        align-items: center;
+        padding: 4rem;
+        margin-top: 3rem;
+        ol {
+            li {
+                p {
+                    color: #1E1E1E;
+                    font-weight: 500;
+                    font-size: .9rem;
+                }
+            }
+            li + li {
+                margin-top: 1rem;
+            }
+        }
+    }
+}
+
+.sec13 {
+    background-color: #ffffff;
+    padding: 4rem 4.7rem 6rem;
+    p {
+        font-size: .85rem;
+        font-weight: 500;
+    }
+    h2 {
+        font-size: 1.4rem;
+        text-align: center;
+        margin-top: 2rem;
+        color: #053A57;
+    }
+    .container-accordeon {
+        margin-top: 3rem;
     }
 }
 
