--- a/src/pages/pag01/index.pug
+++ b/src/pages/pag01/index.pug
@@ -83,7 +83,7 @@ block body
 		
 		#pop2
 			.flexModal
-				+image('img05.png', 'img')
+				+image('img05b.png', 'img')
 				.boxText
 					button.modal-close
 						+image('close.png', 'ico')
@@ -92,7 +92,7 @@ block body
 		
 		#pop3
 			.flexModal
-				+image('img05.png', 'img')
+				+image('img05c.png', 'img')
 				.boxText
 					button.modal-close
 						+image('close.png', 'ico')
@@ -101,7 +101,7 @@ block body
 		
 		#pop4
 			.flexModal
-				+image('img05.png', 'img')
+				+image('img05d.png', 'img')
 				.boxText
 					button.modal-close
 						+image('close.png', 'ico')
