FIX: Ajuste codigo

--- a/src/pages/pag01/index.pug
+++ b/src/pages/pag01/index.pug
@@ -4,25 +4,25 @@ block styles
 	link(rel="stylesheet", href="style.css")
 
 block body
-	body(prev-hide, next-hide, menu-hide)
+	body
 
-		header.wow.up
+		header.up
 			+image('logo.png', 'logo')
 		
-		section.sec1
+		section.sec1.up
 			.flex
 				+image('img01.png', 'img left')
 				.boxText.right
 					h1 Contribuições da Assistência Social para a Educação Integral
 					p A inter-relação entre a educação integral e a intersetorialidade é essencial para garantir uma abordagem abrangente no desenvolvimento das crianças e adolescentes, especialmente no contexto da educação pública. Muitas dessas crianças possuem necessidades que vão além da sala de aula, demandando uma maior integração entre a Educação e a Assistência Social.
 		
-		section.sec2
+		section.sec2.up
 			.box.up
 				p Isso se torna particularmente relevante no Brasil, onde há a necessidade de avançar na efetivação dos direitos humanos e na promoção de uma proteção social universal, integrada e democrática.
 		
-		section.sec3
+		section.sec3.up
 			p.up Tais medidas são fundamentais para combater o racismo estrutural e enfrentar as desigualdades de gênero e sociais. Contudo, a falta de reformas estruturantes e a implementação ineficaz de políticas públicas têm perpetuado desigualdades agravadas pelos efeitos da colonização e da concentração de riqueza e poder. Esse cenário resulta em um acesso desigual à renda, à riqueza e aos bens produzidos socialmente (Silveira et al., 2021).
-			h2 Conheça mais detalhes dessas medidas abaixo:
+			h2.up Conheça mais detalhes dessas medidas abaixo:
 			.container-accordeon.up
 				.corpbtn
 					button.accordeon-title
@@ -48,9 +48,9 @@ block body
 						p As ações do CRAS são especialmente importantes porque permitem uma articulação entre a escola, a família e a comunidade, criando um ambiente propício para o desenvolvimento integral dos alunos. Ao organizar atividades coletivas e oferecer oficinas e demais atividades de acompanhamento e encaminhamentos para demais políticas públicas, com ênfase na redução da pobreza e no fortalecimento de vínculos sociais, os CRAS contribuem significativamente para a redução das vulnerabilidades sociais.
 					
 		section.sec4.up
-			p O principal objetivo do CRAS é prevenir a ocorrência de vulnerabilidades e riscos sociais em territórios marcados pela desigualdade, por meio do fortalecimento das capacidades <b>protetivas e autonomia</b>, da ampliação do acesso a direitos e da promoção de um ambiente de inclusão. 
-			p As funções do CRAS incluem a oferta pública de trabalho social com famílias, por meio do Serviço de Proteção e Atenção Integral à Família (PAIF), que visa fortalecer os vínculos familiares e comunitários, <b>por meio do acesso às seguranças socioassistenciais, demais direitos e trabalho social</b>. Além disso, o CRAS oferece o Serviço de Convivência e Fortalecimento de Vínculos (SCFV) e o Serviço de Proteção Social Básica no Domicílio, voltado para pessoas idosas e com deficiência. <b>É no CRAS que os cidadãos se inscrevem no Cadastro Único para programas federais, como Minha Casa Minha Vida e o Bolsa Família</b>.
-			.flex
+			p.up O principal objetivo do CRAS é prevenir a ocorrência de vulnerabilidades e riscos sociais em territórios marcados pela desigualdade, por meio do fortalecimento das capacidades <b>protetivas e autonomia</b>, da ampliação do acesso a direitos e da promoção de um ambiente de inclusão. 
+			p.up As funções do CRAS incluem a oferta pública de trabalho social com famílias, por meio do Serviço de Proteção e Atenção Integral à Família (PAIF), que visa fortalecer os vínculos familiares e comunitários, <b>por meio do acesso às seguranças socioassistenciais, demais direitos e trabalho social</b>. Além disso, o CRAS oferece o Serviço de Convivência e Fortalecimento de Vínculos (SCFV) e o Serviço de Proteção Social Básica no Domicílio, voltado para pessoas idosas e com deficiência. <b>É no CRAS que os cidadãos se inscrevem no Cadastro Único para programas federais, como Minha Casa Minha Vida e o Bolsa Família</b>.
+			.flex.up
 				.flexButton.up(data-modal="#pop1")
 					.boxIco
 						+image('ico1.png', 'ico')
@@ -108,25 +108,25 @@ block body
 					p.pTitle Programa Primeira Infância no SUAS:
 					p Voltado para famílias com gestantes e crianças na primeira infância, ou seja de 0 a 6 anos de idade, esse programa busca fortalecer os vínculos familiares e comunitários, promover a parentalidade, ampliar o acesso a direitos e garantir o desenvolvimento integral das crianças em situação de vulnerabilidade social. O programa também promove a articulação intersetorial entre os serviços de assistência social e outras políticas públicas, como saúde e educação, garantindo integralidade nos cuidados.
 		
-		section.sec5
+		section.sec5.up
 			.flex
 				.boxText.left
 					h1 Funções da Política de Assistência Social na proteção social mais ampla
 					p O sistema de proteção social brasileiro, integrado ao sistema nacional e internacional de direitos humanos, foi construído, historicamente, a partir de princípios como a universalidade e a integralidade. Diretrizes democráticas importantes também orientam a proteção social brasileira, como a descentralização político administrativa, o que demandou reordenamentos, orientados por perspectivas que fomentam a participação social e governanças deliberativas.
 				+image('img06.png', 'img right')
 		
-		section.sec6
+		section.sec6.up
 			.flex
 				+image('img08.png', 'img left')
 				.boxText.right
 					p A assistência social é uma política de Seguridade Social que se integra à saúde e à previdência social. É uma política pública não contributiva, ou seja, a contribuição para a Seguridade Social não é critério para acesso aos direitos  relacionados à assistência social. Além de não contributiva é considerada um dever do Estado e direito de cidadania a quem dela necessitar a mesma premissa da Educação Integral.
 					p A política de Assistência Social é fundamental para garantir a proteção social e o fortalecimento de vínculos familiares e comunitários, de indivíduos e famílias que se encontram em vulnerabilidade social e risco pessoal e/ou social. Neste guia, você terá acesso às orientações essenciais sobre os conceitos básicos da assistência social, suas funções e estratégias que podem ser adotadas para maior integração com a educação, visando a integralidade das atenções.
 
-		section.sec7
+		section.sec7.up
 			.box.up
 				p A Assistência Social objetiva, essencialmente, promover a inclusão social e a equidade; prevenir situações de vulnerabilidade e risco social; fortalecer os vínculos familiares e comunitários; garantir o acesso a direitos e serviços socioassistenciais.
 		
-		section.sec8
+		section.sec8.up
 			p.up Na Lei Orgânica de Assistência Social (LOAS – Lei 8.742/93) são objetivos da assistência social previstos no artigo 2º:
 			.container-accordeon.up
 				.corpbtn
@@ -156,11 +156,11 @@ block body
 					.accordeon-texto
 						p A defesa de direitos, que visa a garantir o pleno acesso aos direitos no conjunto das provisões socioassistenciais.
 
-		section.sec9
+		section.sec9.up
 			.box.up
 				p Para o enfrentamento da pobreza, a assistência social realiza-se de forma integrada às políticas setoriais, garantindo mínimos sociais e provimento de condições para atender contingências sociais e promovendo a universalização dos direitos sociais.
 
-		section.sec10
+		section.sec10.up
 			.flex
 				+image('img12.png', 'img left')
 				.boxText.right
@@ -168,16 +168,16 @@ block body
 					p A proteção social básica está relacionada a um conjunto de serviços, programas, projetos e benefícios da assistência social que visa prevenir situações de vulnerabilidade e risco social por meio do desenvolvimento de potencialidades e aquisições e do fortalecimento de vínculos familiares e comunitários.
 					p Já a proteção social especial expressa um conjunto de serviços, programas e projetos cujo objetivo é contribuir para a reconstrução de vínculos familiares e comunitários, a defesa de direito, o fortalecimento das potencialidades e aquisições e a proteção de famílias e indivíduos para o enfrentamento das situações de violação de direitos.
 
-		section.sec11
+		section.sec11.up
 			.flex
 				.boxText.left
 					p As proteções sociais básica e especial são ofertadas pela rede socioassistencial, de forma integrada, diretamente pelos entes públicos e/ou pelas entidades e organizações de assistência social vinculadas ao SUAS, respeitadas as especificidades de cada ação.
 					p Para as ofertas da proteção social o SUAS conta com os Centros de Referência de Assistência Social (CRAS); os Centros Especializados de Assistência Social (CREAS); os Centros de Atendimento Especializados para a População em Situação de Rua (Centro Pop); os acolhimentos institucionais, além de Centros de Convivência.
 				+image('img13.png', 'img right')
 
-		section.sec12
-			p.pTitle Estruturação das provisões da assistência social no Brasil
-			p As provisões da assistência social no Brasil são estruturadas em serviços, programas, projetos e benefícios.
+		section.sec12.up
+			p.pTitle.up Estruturação das provisões da assistência social no Brasil
+			p.up As provisões da assistência social no Brasil são estruturadas em serviços, programas, projetos e benefícios.
 			.box.up
 				ol
 					li
@@ -187,7 +187,7 @@ block body
 					li
 						p <b>Projetos:</b> são investimentos econômicos e sociais, destinados às pessoas em situação de pobreza, que buscam subsidiar técnica e financeiramente iniciativas que garantam a capacidade produtiva e de gestão para a melhoria das condições gerais de subsistência, a elevação da qualidade de vida e a preservação do meio ambiente, em articulação com as demais políticas públicas. De acordo com a PNAS/2004, esses projetos integram o nível de proteção social básica. Contudo, podem voltar-se às famílias e pessoas em situação de risco, público-alvo da proteção social especial.
 
-		section.sec13
+		section.sec13.up.completeScorm
 			h2.up Veja abaixo detalhes sobre os benefícios da proteção básica e especial:
 			.container-accordeon.up
 				.corpbtn
@@ -219,7 +219,7 @@ block body
 					.accordeon-texto
 						p Instrumento de identificação por meio de cadastramento alto declarado de famílias em situação de pobreza e vulnerabilidade socioeconômica. Mas também recebe informações de outras bases de dados. Atualmente, subsidia mais de 33 programas federais e programas estaduais, do Distrito Federal e municipais. Embora seja de gestão e financiamento federal, sua execução é realizada pelos municípios, Distrito Federal, no atendimento direto às famílias e pessoas. Atualmente, o CADÚNICO vem se consolidando como uma importante ferramenta para a construção de diagnóstico socioterritorial, subsidiando estudos e a vigilância socioassistencial. O cadastro está presente em todos os municípios brasileiros.
 
-		footer
+		footer.up
 			+image('logo-footer.png', 'imgFooter up')
 
 block scripts
