--- a/src/pages/pag01/style.less
+++ b/src/pages/pag01/style.less
@@ -1,12 +1,9 @@
 @import '../../less/includes/colors.less';
 @import '../../less/includes/fonts.less';
 
-// .mr-full {
-//     // background-image: url(../../assets/img/croqui.png);
-//     background-size: cover;
-//     background-position: top center;
-//     background-attachment: local;
-// }
+.mr-full {
+    background-color: #fff;
+}
 
 header {
     width: 100%;
