--- a/src/templates/page/template.page-base-adaptativo.pug
+++ b/src/templates/page/template.page-base-adaptativo.pug
@@ -29,10 +29,11 @@ html.full-iframe.mr-fontsize
 	+scriptModule('behavior.adaptative.js')
 
 	+scriptScripts('jquery-ui.js')
-	
+	+scriptScripts('aba.js')
 	+scriptScripts('resize.js')
 	+scriptScripts('animated.js')
 	+scriptScripts('accordeon.js')
 	+scriptScripts('modalSlide.js')
+	+scriptScripts('script-viewport-complete.js')
 	+scriptModule('component.modal.js')
 	block scripts
