FEAT: ajuste do mod1 obj2

--- a/src/pages/pag01/index.pug
+++ b/src/pages/pag01/index.pug
@@ -14,7 +14,8 @@ block body
 				+image('img01.png', 'img left')
 				.boxText.right
 					h1 Contribuições da Assistência Social para a Educação Integral
-					p A inter-relação entre a educação integral e a intersetorialidade é essencial para garantir uma abordagem abrangente no desenvolvimento das crianças e adolescentes, especialmente no contexto da educação pública. Muitas dessas crianças possuem necessidades que vão além da sala de aula, demandando uma maior integração entre a Educação e a Assistência Social.
+					p A inter-relação entre a educação integral e a <b>assistência social</b> é essencial para garantir uma abordagem abrangente no desenvolvimento das crianças e adolescentes, especialmente no contexto da educação pública. Muitas dessas crianças possuem necessidades que vão além da sala de aula, demandando uma maior integração das ações nos territórios.
+
 		
 		section.sec2.up
 			.box.up
@@ -22,31 +23,12 @@ block body
 		
 		section.sec3.up
 			p.up Tais medidas são fundamentais para combater o racismo estrutural e enfrentar as desigualdades de gênero e sociais. Contudo, a falta de reformas estruturantes e a implementação ineficaz de políticas públicas têm perpetuado desigualdades agravadas pelos efeitos da colonização e da concentração de riqueza e poder. Esse cenário resulta em um acesso desigual à renda, à riqueza e aos bens produzidos socialmente (Silveira et al., 2021).
-			h2.up Conheça mais detalhes dessas medidas abaixo:
-			.container-accordeon.up
-				.corpbtn
-					button.accordeon-title
-						.boxImg
-							+image('arrowaccordeon.svg', 'ico')
-						p Sistema Único de Assistência Social (SUAS)
-					.accordeon-texto
-						p Diante desse contexto, o Sistema Único de Assistência Social (SUAS) emerge como um sistema público,  fundamental para a gestão da assistência social no Brasil. Instituído pela Lei Orgânica da Assistência Social (LOAS), o SUAS é um sistema descentralizado e participativo que tem como objetivo organizar as ações e serviços voltados à proteção social, com especial ênfase em territórios mais desiguais. Sua governança democrática visa a universalização dos serviços de assistência social, priorizando a cobertura de territórios mais afetados pelas desigualdades, desproteções e vulnerabilidades sociais.
-				.corpbtn
-					button.accordeon-title
-						.boxImg
-							+image('arrowaccordeon.svg', 'ico')
-						p Centros de Referência de Assistência Social (CRAS)
-					.accordeon-texto
-						p <b>O que é?</b>
-						p Dentro dessa estrutura, os Centros de Referência de Assistência Social (CRAS) desempenham um papel essencial na promoção da educação integral e na transformação social. Esses centros oferecem suporte às famílias, garantindo não apenas a proteção social, mas também promovendo o desenvolvimento educacional, social e emocional das crianças e adolescentes. Entre as suas principais contribuições estão a oferta de atividades extracurriculares que complementam o currículo escolar tradicional, incluindo oficinas culturais e de arte, além de fortalecer vínculos familiares e comunitários.
-				.corpbtn
-					button.accordeon-title
-						.boxImg
-							+image('arrowaccordeon.svg', 'ico')
-						p Ações do CRAS
-					.accordeon-texto
-						p As ações do CRAS são especialmente importantes porque permitem uma articulação entre a escola, a família e a comunidade, criando um ambiente propício para o desenvolvimento integral dos alunos. Ao organizar atividades coletivas e oferecer oficinas e demais atividades de acompanhamento e encaminhamentos para demais políticas públicas, com ênfase na redução da pobreza e no fortalecimento de vínculos sociais, os CRAS contribuem significativamente para a redução das vulnerabilidades sociais.
-					
+			h4.up Conheça mais detalhes sobre a assistência social
+			.flex
+				+image('sec3.png', 'img left')
+				.boxText.right
+					p Diante desse contexto, o Sistema Único de Assistência Social (SUAS) emerge como um sistema público, fundamental para a gestão da assistência social no Brasil. Previsto na Lei Orgânica da Assistência Social (LOAS), o SUAS é um sistema descentralizado e participativo que tem como objetivo organizar as ações e serviços voltados à proteção social, com especial ênfase em territórios mais desiguais. Sua governança democrática visa a universalização dos serviços de assistência social, priorizando a cobertura de territórios mais afetados pelas desigualdades, desproteções e vulnerabilidades sociais.
+
 		section.sec4.up
 			p.up O principal objetivo do CRAS é prevenir a ocorrência de vulnerabilidades e riscos sociais em territórios marcados pela desigualdade, por meio do fortalecimento das capacidades <b>protetivas e autonomia</b>, da ampliação do acesso a direitos e da promoção de um ambiente de inclusão. 
 			p.up As funções do CRAS incluem a oferta pública de trabalho social com famílias, por meio do Serviço de Proteção e Atenção Integral à Família (PAIF), que visa fortalecer os vínculos familiares e comunitários, <b>por meio do acesso às seguranças socioassistenciais, demais direitos e trabalho social</b>. Além disso, o CRAS oferece o Serviço de Convivência e Fortalecimento de Vínculos (SCFV) e o Serviço de Proteção Social Básica no Domicílio, voltado para pessoas idosas e com deficiência. <b>É no CRAS que os cidadãos se inscrevem no Cadastro Único para programas federais, como Minha Casa Minha Vida e o Bolsa Família</b>.
@@ -79,7 +61,7 @@ block body
 					button.modal-close
 						+image('close.png', 'ico')
 					p.pTitle Serviço de Proteção e Atenção Integral à Família (PAIF):
-					p O PAIF oferece um trabalho social continuado com famílias em situação de vulnerabilidade <b>social</b>, com o objetivo de fortalecer a função protetiva das famílias, prevenir a ruptura de vínculos e garantir o acesso a direitos. Esse serviço, oferecido necessariamente no CRAS, também promove ações que visam melhorar a qualidade de vida das famílias por meio de intervenções preventivas, <b>proativas</b> e protetivas.
+					p O PAIF oferece um trabalho social continuado com famílias em situação de vulnerabilidade social, com o objetivo de fortalecer a função protetiva das famílias, prevenir a ruptura de vínculos e garantir o acesso a direitos. Esse serviço, oferecido necessariamente no CRAS, também promove ações que visam melhorar a qualidade de vida das famílias por meio de intervenções <b>preventivas</b>, <b>proativas</b> e <b>protetivas</b>.
 		
 		#pop2
 			.flexModal
@@ -97,7 +79,7 @@ block body
 					button.modal-close
 						+image('close.png', 'ico')
 					p.pTitle Serviço de Proteção Social Básica no Domicílio para Pessoas com Deficiência e Idosas:
-					p Com o objetivo de prevenir a ruptura de vínculos familiares e sociais, esse serviço promove a inclusão social, garantindo direitos e incentivando a autonomia das pessoas com deficiência e idosas, além de promover a convivência familiar e comunitária. Ele atua na prevenção de riscos e na promoção da participação social, criando condições para uma convivência mais integrada e inclusiva.
+					p Com o objetivo de prevenir a ruptura de vínculos familiares e sociais, esse serviço promove a inclusão social, garantindo direitos e incentivando a autonomia das pessoas com deficiência e idosas, além de promover a <b>convivência familiar</b> e comunitária. Ele atua na prevenção de riscos e na promoção da participação social, criando condições para uma convivência mais integrada e inclusiva.
 		
 		#pop4
 			.flexModal
@@ -106,7 +88,7 @@ block body
 					button.modal-close
 						+image('close.png', 'ico')
 					p.pTitle Programa Primeira Infância no SUAS:
-					p Voltado para famílias com gestantes e crianças na primeira infância, ou seja de 0 a 6 anos de idade, esse programa busca fortalecer os vínculos familiares e comunitários, promover a parentalidade, ampliar o acesso a direitos e garantir o desenvolvimento integral das crianças em situação de vulnerabilidade social. O programa também promove a articulação intersetorial entre os serviços de assistência social e outras políticas públicas, como saúde e educação, garantindo integralidade nos cuidados.
+					p Voltado para famílias com gestantes e crianças na primeira infância, ou seja de 0 a 6 anos de idade, esse programa busca fortalecer os vínculos familiares e comunitários, promover a <b>parentalidade</b>, ampliar o acesso a direitos e garantir o <b>desenvolvimento integral</b> das crianças em situação de vulnerabilidade social. O programa também promove a articulação intersetorial entre os serviços de assistência social e outras políticas públicas, como saúde e educação, garantindo integralidade nos cuidados.
 		
 		section.sec5.up
 			.flex
@@ -188,8 +170,26 @@ block body
 						p <b>Projetos:</b> são investimentos econômicos e sociais, destinados às pessoas em situação de pobreza, que buscam subsidiar técnica e financeiramente iniciativas que garantam a capacidade produtiva e de gestão para a melhoria das condições gerais de subsistência, a elevação da qualidade de vida e a preservação do meio ambiente, em articulação com as demais políticas públicas. De acordo com a PNAS/2004, esses projetos integram o nível de proteção social básica. Contudo, podem voltar-se às famílias e pessoas em situação de risco, público-alvo da proteção social especial.
 
 		section.sec13.up.completeScorm
-			h2.up Veja abaixo detalhes sobre os benefícios da proteção básica e especial:
+			.flex
+				+image('sec13.png', 'img left')
+				.boxText.right
+					h1 Centros de Referência de Assistência Social (CRAS)
 			.container-accordeon.up
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p O que é?
+					.accordeon-texto
+						p Dentro desse sistema, os Centros de Referência de Assistência Social (CRAS) desempenham um papel essencial na promoção da educação integral e da proteção social de famílias, grupos tradicionais e específicos e pessoas em situação de vulnerabilidade social. Esses centros oferecem suporte às famílias, garantindo não apenas o acesso à benefícios que buscam prover segurança de renda, mas também o desenvolvimento socioemocional de crianças e adolescentes. Entre as suas principais contribuições estão a oferta de atividades extracurriculares que complementam o currículo escolar tradicional, incluindo oficinas culturais e de arte, além de fortalecer vínculos familiares e comunitários.
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p Ações do CRAS
+					.accordeon-texto
+						p As ações do CRAS são especialmente importantes porque permitem uma articulação entre a escola, a família e a comunidade, criando um ambiente propício para o desenvolvimento integral dos alunos. Ao organizar atividades coletivas e oferecer oficinas e demais atividades de acompanhamento e encaminhamentos para demais políticas públicas, com ênfase na redução da pobreza e no fortalecimento de vínculos sociais, os CRAS contribuem significativamente para a redução das vulnerabilidades sociais e prevenção das violações de direitos, como o trabalho infantil.
+					
 				.corpbtn
 					button.accordeon-title
 						.boxImg
