--- a/src/pages/pag01/style.less
+++ b/src/pages/pag01/style.less
@@ -190,14 +190,44 @@ header {
         font-size: .85rem;
         font-weight: 500;
     }
-    h2 {
-        font-size: 1.4rem;
-        text-align: center;
-        margin-top: 2rem;
+    h4 {
+        font-size: 1.2rem;
+        text-align: left;
+        margin-top: 1rem;
         color: #053A57;
+        font-weight: bold;
+        text-align: center;
+    }
+    h4+p{
+        margin-top: 1rem;
     }
     .container-accordeon {
         margin-top: 3rem;
+    }
+
+    .flex {
+        display: flex;
+        align-items: center;
+        gap: 4.1rem;
+        margin-top: 1rem;
+
+        .img {
+            width: 18.2rem;
+        }
+
+        .boxText {
+            h1 {
+                font-size: 1.4rem;
+                color: #1E1E1E;
+            }
+
+            p {
+                font-weight: 500;
+                font-size: 0.85rem;
+                margin-top: 1rem;
+                color: #1E1E1E;
+            }
+        }
     }
 }
 
@@ -503,7 +533,32 @@ header {
         color: #053A57;
     }
     .container-accordeon {
-        margin-top: 3rem;
+        margin-top: 2rem;
+    }
+
+    .flex {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+        margin-top: 1rem;
+
+        .img {
+            width: 8.2rem;
+        }
+
+        .boxText {
+            h1 {
+                font-size: 1.4rem;
+                color: #1E1E1E;
+            }
+
+            p {
+                font-weight: 500;
+                font-size: 0.85rem;
+                margin-top: 1rem;
+                color: #1E1E1E;
+            }
+        }
     }
 }
 
