--- a/src/pages/pag01/index.pug
+++ b/src/pages/pag01/index.pug
@@ -14,7 +14,7 @@ block body
 				+image('img01.png', 'img left')
 				.boxText.right
 					h1 Contribuições da Assistência Social para a Educação Integral
-					p A inter-relação entre a educação integral e a <b>assistência social</b> é essencial para garantir uma abordagem abrangente no desenvolvimento das crianças e adolescentes, especialmente no contexto da educação pública. Muitas dessas crianças possuem necessidades que vão além da sala de aula, demandando uma maior integração das ações nos territórios.
+					p A inter-relação entre a educação integral e a assistência social é essencial para garantir uma abordagem abrangente no desenvolvimento das crianças e adolescentes, especialmente no contexto da educação pública. Muitas dessas crianças possuem necessidades que vão além da sala de aula, demandando uma maior integração das ações nos territórios.
 
 		
 		section.sec2.up
@@ -27,9 +27,9 @@ block body
 			.flex
 				+image('sec3.png', 'img left')
 				.boxText.right
-					p Diante desse contexto, o Sistema Único de Assistência Social (SUAS) emerge como um sistema público, fundamental para a gestão da assistência social no Brasil. Previsto na Lei Orgânica da Assistência Social (LOAS), o SUAS é um sistema descentralizado e participativo que tem como objetivo organizar as ações e serviços voltados à proteção social, com especial ênfase em territórios mais desiguais. Sua governança democrática visa a universalização dos serviços de assistência social, priorizando a cobertura de territórios mais afetados pelas desigualdades, desproteções e vulnerabilidades sociais.
+					p Diante desse contexto, o Sistema Único de Assistência Social (SUAS) emerge como um sistema público, fundamental para a gestão da assistência social no Brasil. Previsto na Lei Orgânica da Assistência Social (LOAS), o SUAS é um sistema descentralizado e participativo que tem como objetivo organizar as ações e serviços voltados à proteção social, com especial ênfase em territórios mais desiguais. Sua governança democrática visa a universalização dos serviços de assistência social, priorizando a cobertura de territórios mais afetados pelas desigualdades, desproteções e vulnerabilidades sociais.
 
-		section.sec4.up
+		//- section.sec4.up
 			p.up O principal objetivo do CRAS é prevenir a ocorrência de vulnerabilidades e riscos sociais em territórios marcados pela desigualdade, por meio do fortalecimento das capacidades <b>protetivas e autonomia</b>, da ampliação do acesso a direitos e da promoção de um ambiente de inclusão. 
 			p.up As funções do CRAS incluem a oferta pública de trabalho social com famílias, por meio do Serviço de Proteção e Atenção Integral à Família (PAIF), que visa fortalecer os vínculos familiares e comunitários, <b>por meio do acesso às seguranças socioassistenciais, demais direitos e trabalho social</b>. Além disso, o CRAS oferece o Serviço de Convivência e Fortalecimento de Vínculos (SCFV) e o Serviço de Proteção Social Básica no Domicílio, voltado para pessoas idosas e com deficiência. <b>É no CRAS que os cidadãos se inscrevem no Cadastro Único para programas federais, como Minha Casa Minha Vida e o Bolsa Família</b>.
 			.flex.up
@@ -54,7 +54,7 @@ block body
 					button.button
 						p Primeira Infância
 		
-		#pop1
+		//- #pop1
 			.flexModal
 				+image('img05.png', 'img')
 				.boxText
@@ -63,7 +63,7 @@ block body
 					p.pTitle Serviço de Proteção e Atenção Integral à Família (PAIF):
 					p O PAIF oferece um trabalho social continuado com famílias em situação de vulnerabilidade social, com o objetivo de fortalecer a função protetiva das famílias, prevenir a ruptura de vínculos e garantir o acesso a direitos. Esse serviço, oferecido necessariamente no CRAS, também promove ações que visam melhorar a qualidade de vida das famílias por meio de intervenções <b>preventivas</b>, <b>proativas</b> e <b>protetivas</b>.
 		
-		#pop2
+		//- #pop2
 			.flexModal
 				+image('img05b.png', 'img')
 				.boxText
@@ -72,7 +72,7 @@ block body
 					p.pTitle Serviço de Convivência e Fortalecimento de Vínculos (SCFV):
 					p.pTitle Esse serviço é realizado em grupos, organizados para garantir o desenvolvimento de aquisições progressivas ao longo do ciclo de vida dos usuários. Ele complementa o trabalho social com as famílias, prevenindo situações de risco social e promovendo a socialização, o fortalecimento dos vínculos familiares e a convivência comunitária. O SCFV possui um caráter preventivo e proativo, estimulando a construção de alternativas <b>emancipatórias</b> para o enfrentamento da vulnerabilidade social. <b>Milhares de adolescentes acessam este serviço em todo o Brasil</b>.
 		
-		#pop3
+		//- #pop3
 			.flexModal
 				+image('img05c.png', 'img')
 				.boxText
@@ -81,7 +81,7 @@ block body
 					p.pTitle Serviço de Proteção Social Básica no Domicílio para Pessoas com Deficiência e Idosas:
 					p Com o objetivo de prevenir a ruptura de vínculos familiares e sociais, esse serviço promove a inclusão social, garantindo direitos e incentivando a autonomia das pessoas com deficiência e idosas, além de promover a <b>convivência familiar</b> e comunitária. Ele atua na prevenção de riscos e na promoção da participação social, criando condições para uma convivência mais integrada e inclusiva.
 		
-		#pop4
+		//- #pop4
 			.flexModal
 				+image('img05d.png', 'img')
 				.boxText
@@ -173,7 +173,7 @@ block body
 			.flex
 				+image('sec13.png', 'img left')
 				.boxText.right
-					h1 Centros de Referência de Assistência Social (CRAS)
+					h1 Conheça em mais detalhes sobre os CRAS, unidades públicas estratégicas para a educação integral nos territórios.
 			.container-accordeon.up
 				.corpbtn
 					button.accordeon-title
@@ -186,15 +186,44 @@ block body
 					button.accordeon-title
 						.boxImg
 							+image('arrowaccordeon.svg', 'ico')
-						p Ações do CRAS
+						p Ações
 					.accordeon-texto
 						p As ações do CRAS são especialmente importantes porque permitem uma articulação entre a escola, a família e a comunidade, criando um ambiente propício para o desenvolvimento integral dos alunos. Ao organizar atividades coletivas e oferecer oficinas e demais atividades de acompanhamento e encaminhamentos para demais políticas públicas, com ênfase na redução da pobreza e no fortalecimento de vínculos sociais, os CRAS contribuem significativamente para a redução das vulnerabilidades sociais e prevenção das violações de direitos, como o trabalho infantil.
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p Serviço de Proteção e Atendimento Integral à Família (PAIF)
+					.accordeon-texto
+						p O PAIF oferece um trabalho social continuado com famílias em situação de vulnerabilidade social, com o objetivo de fortalecer a função protetiva das famílias, prevenir a ruptura de vínculos e garantir o acesso a direitos. Esse serviço, oferecido necessariamente no CRAS, também promove ações que visam melhorar a qualidade de vida das famílias por meio de intervenções <b>preventivas</b>, <b>proativas</b> e <b>protetivas</b>.
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p Serviço de Convivência e Fortalecimento de Vínculos (SCFV)
+					.accordeon-texto
+						p Esse serviço é realizado em grupos, organizados para garantir o desenvolvimento de aquisições progressivas ao longo do ciclo de vida dos usuários. Ele complementa o trabalho social com as famílias, prevenindo situações de risco social e promovendo a socialização, o fortalecimento dos vínculos familiares e a convivência comunitária. O SCFV possui um caráter preventivo e proativo, estimulando a construção de alternativas <b>emancipatórias</b> para o enfrentamento da vulnerabilidade social. <b>Milhares de adolescentes acessam este serviço em todo o Brasil</b>.
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p Serviço de Proteção Social Básica no Domicílio para Pessoas com Deficiência e Idosas
+					.accordeon-texto
+						p Com o objetivo de prevenir a ruptura de vínculos familiares e sociais, esse serviço promove a inclusão social, garantindo direitos e incentivando a autonomia das pessoas com deficiência e idosas, além de promover a <b>convivência familiar</b> e comunitária. Ele atua na prevenção de riscos e na promoção da participação social, criando condições para uma convivência mais integrada e inclusiva.
+				
+				.corpbtn
+					button.accordeon-title
+						.boxImg
+							+image('arrowaccordeon.svg', 'ico')
+						p Programa Primeira Infância no SUAS
+					.accordeon-texto
+						p Voltado para famílias com gestantes e crianças na primeira infância, ou seja de 0 a 6 anos de idade, esse programa busca fortalecer os vínculos familiares e comunitários, promover a <b>parentalidade</b>, ampliar o acesso a direitos e garantir o <b>desenvolvimento integral</b> das crianças em situação de vulnerabilidade social. O programa também promove a articulação intersetorial entre os serviços de assistência social e outras políticas públicas, como saúde e educação, garantindo integralidade nos cuidados.
 					
 				.corpbtn
 					button.accordeon-title
 						.boxImg
 							+image('arrowaccordeon.svg', 'ico')
-						p Benefício de Prestação Continuada (BPC):
+						p Benefício de Prestação Continuada (BPC)
 					.accordeon-texto
 						p Provido pelo governo federal, consiste no repasse de um salário-mínimo mensal ao idoso (com 65 anos ou mais) e à Pessoa com Deficiência que comprovem não ter meios para se sustentar ou de ser sustentado pela família. Esse benefício compõe o nível de proteção social básica, sendo seu repasse feito diretamente ao beneficiário.
 				.corpbtn
@@ -215,7 +244,7 @@ block body
 					button.accordeon-title
 						.boxImg
 							+image('arrowaccordeon.svg', 'ico')
-						p Cadastro Único - CADÚNICO
+						p Cadastro Único (CADÚNICO)
 					.accordeon-texto
 						p Instrumento de identificação por meio de cadastramento alto declarado de famílias em situação de pobreza e vulnerabilidade socioeconômica. Mas também recebe informações de outras bases de dados. Atualmente, subsidia mais de 33 programas federais e programas estaduais, do Distrito Federal e municipais. Embora seja de gestão e financiamento federal, sua execução é realizada pelos municípios, Distrito Federal, no atendimento direto às famílias e pessoas. Atualmente, o CADÚNICO vem se consolidando como uma importante ferramenta para a construção de diagnóstico socioterritorial, subsidiando estudos e a vigilância socioassistencial. O cadastro está presente em todos os municípios brasileiros.
 
