--- a/src/pages/pag01/style.less
+++ b/src/pages/pag01/style.less
@@ -34,7 +34,7 @@ header {
             padding: 1rem 2.1rem;
             transition-duration: 0s;
             p {
-                font-size: 1rem;
+                font-size: .85rem;
                 font-weight: 500;
                 color: #ffffff;
                 transition-duration: .3s;
